<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#d5d9ce"
    android:gravity="center_horizontal"
    tools:context=".VerificationActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />
    <TextView
        android:text="@string/otp_verification"
        android:textAlignment="center"
        android:textSize="18pt"
        android:textStyle="bold"
        android:textColor="#036007"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/we_will_send_you_a"
            android:layout_marginEnd="6dp"
            android:textSize="14pt"
            android:textColor="#656262"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/one_time_password"
            android:layout_marginEnd="10dp"
            android:textSize="14pt"
            android:textColor="#101010"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
    <TextView
        android:text="@string/on_this_mobile_number"
        android:layout_marginEnd="6dp"
        android:textSize="14pt"
        android:textColor="#656262"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="18dp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editNumber"
                android:gravity="center"
                android:autofillHints="(000)-000-0000"
                android:hint="@string/type"
                android:ems="1"
                android:textSize="20sp"
                android:padding="10dp"
                android:textStyle="bold|normal"
                android:textColor="#ffff"
                android:layout_marginBottom="15dp"
                android:inputType="phone"
                android:background="@drawable/background_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/container"
                android:text="@string/continued"
                android:textStyle="bold|normal"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:backgroundTint="#036007"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>